[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://fonts/montreal/Montreal.tres" type="DynamicFont" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Golf" type="Button" parent="."]
margin_left = 42.0
margin_top = 54.0
margin_right = 340.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 2 )
text = "Golf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pyramid" type="Button" parent="."]
margin_left = 365.0
margin_top = 55.0
margin_right = 663.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 2 )
text = "Pyramid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 681.0
margin_top = 410.0
margin_right = 979.0
margin_bottom = 563.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Golf" to="." method="_on_golf_pressed"]
[connection signal="pressed" from="Pyramid" to="." method="_on_pyramid_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
